CTA2 String Combination

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,7 +96,9 @@
 		"numbers": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"cstring": "cpp",
+		"cstdarg": "cpp"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
