--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,7 +102,13 @@
 		"bitset": "cpp",
 		"ctime": "cpp",
 		"regex": "cpp",
-		"sstream": "cpp"
+		"sstream": "cpp",
+		"condition_variable": "cpp",
+		"ratio": "cpp",
+		"mutex": "cpp",
+		"semaphore": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
